# Deadball-Database-Generator

./: .gitignore  Cargo.toml  README.md  better_standings.txt  deadball.db  error.txt  league.db  league_hitting.txt  league_summary.txt  license.md  standings_query.txt  subquery_obt.txt  team summary.txt  wins.txt
Al West/: Los Angeles Angels.txt  Texas Rangers.txt
Bobs/: Tomato.txt  ketchup.txt
Bons/: Angels.txt  Ducks.txt
Cat League/: Lions.txt  Tigers.txt
Cats/: Lions.txt  Tigers.txt
Desert League/: Alba Dukes.txt  Denver Bears.txt  Las Vegas Aces.txt  Las Vesas Aces.txt  Phoenix Suns.txt  league_info.txt
Desert Leauge/: Test.txt
Dog League/: Beagles.txt  Dog man.txt  St. Bernards.txt
Dogs/: Beagles.txt  Dalmations.txt  Wolfmen.txt
Duel League/: Dragons.txt  Vikings.txt
Extreme League/: Anaheim Ducks.txt  New York Bombers.txt
Fish/: Spongebob.txt  Squidwards.txt
Ghost League/: Ceasars.txt  Los Angeles Red Cars.txt  San Francisco Seals.txt  league_info.txt
Grandfather League/: Bons.txt  Franks.txt  Old Men.txt
High Five League/: Ghosts.txt  Palms.txt  league_info.txt
Howards/: Ducks.txt
Inquire Loading Test/: Dodgers.txt  New York Yankees.txt  league_info.txt
JonTrons/: Bobs.txt
Jontron League/: Arin.txt  Jon.txt  league_info.txt
Mario League/: Boweser.txt  Bowser.txt  league_info.txt  luigi.txt  mario.txt  wario.txt
NL West/: Colorado Rockies.txt  Los Angeles Dodgers.txt  San Diego Padres.txt  San Francisco Giants.txt
PCL/: Dodgers.txt  Hollywood Stars.txt  Los Angeles Angels.txt  Oakland Oaks.txt  Pasadena Palms.txt  (+6 more)
(+89 files in other folders)
