[package]
name = "deadball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.0"
itertools = "0.12.1"
name_maker = "0.1.1"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["bundled","serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"




[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
